--- a/css/nav/style.css
+++ b/css/nav/style.css
@@ -506,7 +506,7 @@
 	display: block;
 }
 /* image layout */
-.flat-mega-menu img {
+.flat-mega-menu .img {
 	width: 100%;
 	float: left;
 	margin-top: 25px;
