--- a/css/style.css
+++ b/css/style.css
@@ -2591,6 +2591,25 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 .info-gallery .starts{
 	margin-bottom: 15px;
 }
+.info-gallery-custom {
+	height:257px;
+}
+.info-gallery-custom .content-btn { 
+	position: absolute;
+	bottom: 0;
+    margin: 20px;
+    left: 35%;
+}
+.info-gallery-trip {
+	height: 250px;
+}
+
+.info-gallery-trip .info-gallery-btn {
+	position: absolute;
+	bottom: 0;
+    margin: 20px;
+    left: 25%;
+}
 
 /* Galley list-view---------------------------------------------------------------*/
 .list-view .img-hover{
