--- a/css/style.css
+++ b/css/style.css
@@ -787,10 +787,34 @@ hr.tall{
 }
 
 .icon-row {
-	margin: 0 8% 0 8%;
+	margin: 0 auto;
 	background-color:rgba(0, 0, 0, 0.1);
 	border-radius: 25px;
-	padding:20px;
+	padding:2%;
+	width:90%;
+   	text-align: center;
+   	height: 160px;
+}
+
+.front_category_icon {
+	width: 25%;
+	float: left;
+	padding: 10px;
+}
+
+.category_name {
+	color: #FFF;
+	font-size: 90%;
+}
+
+.icon-banner {
+	margin-top: 20px;
+	color: #FFF;
+	font-size: 40px !important;
+    text-shadow: 2px 3px 3px rgba(0,0,0,0.5);
+    line-height: 2.6rem;
+    font-weight: bold;
+    padding: 0px;
 }
 
 .banner-col {
